# Regression-Result-Visualizer

./: LICENSE  README.md  pyproject.toml
.github/workflows/: .gitignore  ci.yml
examples/: sample_results.csv
src/regression_result_visualizer/: cli.py  formatter.py  plotter.py
src/regression_result_visualizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_formatter.py  test_plotter.py
