[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regression-result-visualizer"
version = "0.1.0"
description = "Create presentation-ready regression tables and coefficient plots."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.8",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
rrv = "regression_result_visualizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"